Fix issue with footer getting out of alignment with other sections

--- a/css/style.css
+++ b/css/style.css
@@ -226,5 +226,6 @@ a {
     align-items: center;
     color: white;
     width: 100vw;
-    padding: 45px 200px;
+    padding-top: 45px;
+    padding-bottom: 45px;
 }
